# DAW-Copilot

./: AI MIDI Composer.vst3  CMakeLists.txt  README.md  build.bat  build_sidecar.bat  clean.bat  heartbeat.bat  installer.iss  main.py  make_installer.bat  pyvenv.cfg
docs/: README.txt
installer/: split_venv.py
sidecar/: main.py  requirements.txt  rthook_syspath.py  sidecar.spec
src/chat/: ChatHistory.cpp  Message.h
src/gui/: PluginEditor.cpp  PluginEditor.h  StemStrip.cpp  StemStrip.h
src/inference/: HttpSidecarBackend.cpp  HttpSidecarBackend.h  InferenceBackend.h  SidecarManager.cpp  SidecarManager.h
src/plugin/: Parameters.h  PluginProcessor.cpp  PluginProcessor.h
